// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureTooltip (single) should not show close button and not show filter button 1`] = `
<Fragment>
  <FeatureProperties
    featureId="feature"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={false}
  />
</Fragment>
`;

exports[`FeatureTooltip (single) should show both filter buttons and close button 1`] = `
<Fragment>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiTextAlign
        textAlign="center"
      >
        <EuiButtonIcon
          aria-label="Close tooltip"
          color="primary"
          data-test-subj="mapTooltipCloseButton"
          iconSize="m"
          iconType="cross"
          onClick={[Function]}
          type="button"
        />
      </EuiTextAlign>
    </EuiFlexItem>
  </EuiFlexGroup>
  <FeatureProperties
    featureId="feature"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={true}
  />
</Fragment>
`;

exports[`FeatureTooltip (single) should show close button, but not filter button 1`] = `
<Fragment>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiTextAlign
        textAlign="center"
      >
        <EuiButtonIcon
          aria-label="Close tooltip"
          color="primary"
          data-test-subj="mapTooltipCloseButton"
          iconSize="m"
          iconType="cross"
          onClick={[Function]}
          type="button"
        />
      </EuiTextAlign>
    </EuiFlexItem>
  </EuiFlexGroup>
  <FeatureProperties
    featureId="feature"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={false}
  />
</Fragment>
`;

exports[`FeatureTooltip (single) should show error message if unable to load tooltip content 1`] = `
<Fragment>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiTextAlign
        textAlign="center"
      >
        <EuiButtonIcon
          aria-label="Close tooltip"
          color="primary"
          data-test-subj="mapTooltipCloseButton"
          iconSize="m"
          iconType="cross"
          onClick={[Function]}
          type="button"
        />
      </EuiTextAlign>
    </EuiFlexItem>
  </EuiFlexGroup>
  <FeatureProperties
    featureId="feature"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={true}
  />
</Fragment>
`;

exports[`FeatureTooltip (single) should show only filter button for filterable properties 1`] = `
<Fragment>
  <FeatureProperties
    featureId="feature"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={true}
  />
</Fragment>
`;
